--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -59,10 +59,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlogCreateArticleTests.cs" />
     <Compile Include="Data\DataReader.cs" />
     <Compile Include="BlogRegistrationTests.cs" />
+    <Compile Include="Models\CreateArticle.cs" />
     <Compile Include="Models\RegistrationUser.cs" />
     <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\CreateArticlePage\CreateArticlePage.cs" />
+    <Compile Include="Pages\CreateArticlePage\CreateArticlePageAsserter.cs" />
+    <Compile Include="Pages\CreateArticlePage\CreateArticlePageConstants.cs" />
+    <Compile Include="Pages\CreateArticlePage\CreateArticlePageMap.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageAsserter.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPageConstants.cs" />
