I added a new BlogLoginTest.cs

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -60,9 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlogCreateArticleTests.cs" />
+    <Compile Include="BlogLoginTests.cs" />
     <Compile Include="Data\DataReader.cs" />
     <Compile Include="BlogRegistrationTests.cs" />
-   <Compile Include="Models\LoginUser.cs" />
+    <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Models\CreateArticle.cs" />
     <Compile Include="Models\RegistrationUser.cs" />
     <Compile Include="Pages\BasePage.cs" />
