--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Dapper" version="1.50.2" targetFramework="net452" />
   <package id="NLog" version="4.4.6" targetFramework="net452" />
   <package id="NLog.Config" version="4.4.6" targetFramework="net452" />
@@ -21,4 +22,5 @@
   <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.15.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.IEDriver" version="3.3.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.IEDriver64" version="3.3.0.1" targetFramework="net452" />
+  <package id="TestStack.Seleno" version="0.9.61" targetFramework="net452" />
 </packages>
