--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Dapper" version="1.50.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="NLog" version="4.4.9" targetFramework="net452" />
   <package id="NLog.Config" version="4.4.9" targetFramework="net452" />
   <package id="NLog.Schema" version="4.4.9" targetFramework="net452" />
