--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -18,13 +18,14 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
   <package id="NUnit.Runners" version="3.6.1" targetFramework="net45" />
-  <package id="Selenium.Firefox.WebDriver" version="0.15.0" targetFramework="net45" />
+  <package id="Selenium.Chrome.WebDriver" version="2.29" targetFramework="net45" />
+  <package id="Selenium.Firefox.WebDriver" version="0.16.1" targetFramework="net45" />
   <package id="Selenium.Support" version="3.4.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net45" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net45" />
-  <package id="Selenium.WebDriver.GeckoDriver" version="0.15.0.4" targetFramework="net45" />
-  <package id="Selenium.WebDriver.GeckoDriver.Win32" version="0.15.0" targetFramework="net45" />
-  <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.15.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.16.1" targetFramework="net45" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win32" version="0.16.1" targetFramework="net45" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.16.1" targetFramework="net45" />
   <package id="Selenium.WebDriver.IEDriver" version="3.4.0" targetFramework="net45" />
   <package id="Selenium.WebDriver.IEDriver64" version="3.3.0.1" targetFramework="net45" />
   <package id="TestStack.Seleno" version="0.9.61" targetFramework="net45" />
